# SimpleSparkViewer

./: .gitignore  .gitmodules  LICENSE  MultiplayerManager.js  README.md  SplatLoader.js  VRHeadset.glb  index.html  main.js  package-lock.json  package.json  spark_changes.diff  spark_changes_utf8.diff  vite.config.js
.github/workflows/: deploy.yml
spark/: examples.html  index.html
spark/examples/: assets.json
spark/examples/procedural-splats/: index.html
spark/examples/raycasting/: index.html
spark/examples/webxr/: index.html
spark/rust/spark-lib/src/: decoder.rs
spark/rust/spark-worker-rs/: Cargo.toml
spark/src/: PackedSplats.ts  Readback.ts  SplatMesh.ts  SplatPager.ts  controls.ts  oldWorker.ts  pcsogs.ts
spark/src/shaders/: computeUvec4.glsl
