[package]
name = "spark-worker-rs"
version = "0.1.0"
rust-version = "1.82"
edition = "2021"
license = "Proprietary"
authors = ["World Labs Technologies"]
repository = "https://github.com/sparkjs-dev/spark"

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash.workspace = true
anyhow.workspace = true
glam.workspace = true
half.workspace = true
js-sys.workspace = true
ordered-float.workspace = true
smallvec.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
spark-lib = { path = "../spark-lib" }
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
itertools.workspace = true
console_error_panic_hook = "0.1"
